retrieveUnpackaged/objects/Expert_Review_Panel__c.object
<CustomObject>
    <fields>
        <fullName>NOFA_Group_Name__c</fullName>
        <description>Derives NOFA Group Name of that particular Expert review panel</description>
        <formula>Panel__r.NOFA_Group_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its a lookup to panel members object to select a panel member</description>
        <label>Panel Member</label>
        <referenceTo>Panel_Member__c</referenceTo>
        <relationshipLabel>Expert Review Panel</relationshipLabel>
        <relationshipName>Peer_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel__c</fullName>
        <label>Panel</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipLabel>Expert Review Panel</relationshipLabel>
        <relationshipName>Expert_Review_Panel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Panel_member_name__c</fullName>
        <formula>Panel_Member__r.Expert_Reviewer__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel member name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact object to find a reviewer</description>
        <label>Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expert Review Panel</relationshipLabel>
        <relationshipName>Expert_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <description>Derives stage type from panel object</description>
        <formula>TEXT( Panel__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Derives the Stage Id from stages object</description>
        <formula>Panel__r.Stage_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>States the status of the expert review panel from a set of values</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expert Review Panel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Panel_member_name__c</columns>
        <columns>Panel_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Peer Review Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expert Review Panel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>